Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tenetur ducimus a. Velit pariatur ipsa, ullam nesciunt quisquam repellendus aperiam magnam id iusto minima excepturi omnis cupiditate explicabo doloribus architecto.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore natus sit et, voluptate sed accusamus labore quo possimus at culpa aspernatur delectus placeat nulla sunt? Velit explicabo quas at minus.</p>
 </body>
 </html>
